[package]
name = "oneblock-rando"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1"
flate2 = "1.0"
hematite-nbt = "0.5.2"
once_cell = "1.9.0"
num-traits = "0.2"
num-derive = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
structopt = "0.3"
